--- a/project-template.html
+++ b/project-template.html
@@ -153,73 +153,75 @@
     </div>
 
     <div
-      class="modal"
       role="dialog"
       aria-modal="true"
       aria-label="Slideshow of project images"
       aria-describedby="modal-description"
+      id="modal-container"
     >
-      <p id="modal-description" class="screenreader-text">
-        Use arrow keys or the arrow buttons to proceed to the next or last image
-        in the slideshow. To exit the slideshow, press escape or click the close
-        button.
-      </p>
-      <p id="slide-num" aria-live="polite" class="screenreader-text"></p>
-      <button class="close" aria-label="Close">&times;</button>
-      <div class="slide">
-        <img src="images/wander.png" alt="_______" />
+      <div role="document" class="modal" tabindex="-1">
+        <h2 id="slide-num" aria-live="assertive" class="screenreader-text"></h2>
+        <p id="modal-description" class="screenreader-text">
+          Use arrow keys or the arrow buttons to proceed to the next or last
+          image in the slideshow. To exit the slideshow, press escape or click
+          the close button.
+        </p>
+        <button class="close" aria-label="Close dialog">&times;</button>
+        <div class="slide">
+          <img src="images/wander.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander1.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander2.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander3.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander4.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander5.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander6.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander7.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander8.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander9.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander10.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander11.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander12.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander13.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander14.png" alt="_______" />
+        </div>
+        <div class="slide">
+          <img src="images/wander15.png" alt="_______" />
+        </div>
+        <button class="left-arrow" aria-label="Previous image">
+          <span>&#x276E;</span>
+        </button>
+        <button class="right-arrow" aria-label="Next image">
+          <span>&#x276F;</span>
+        </button>
       </div>
-      <div class="slide">
-        <img src="images/wander1.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander2.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander3.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander4.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander5.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander6.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander7.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander8.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander9.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander10.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander11.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander12.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander13.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander14.png" alt="_______" />
-      </div>
-      <div class="slide">
-        <img src="images/wander15.png" alt="_______" />
-      </div>
-      <button class="left-arrow" aria-label="Previous image">
-        <span>&#x276E;</span>
-      </button>
-      <button class="right-arrow" aria-label="Next image">
-        <span>&#x276F;</span>
-      </button>
     </div>
   </body>
 
