--- a/draw-this.html
+++ b/draw-this.html
@@ -149,95 +149,97 @@
     </div>
 
     <div
-      class="modal"
       role="dialog"
       aria-modal="true"
       aria-label="Slideshow of project images"
       aria-describedby="modal-description"
+      id="modal-container"
     >
-      <p id="modal-description" class="screenreader-text">
-        Use arrow keys or the arrow buttons to proceed to the next or last image
-        in the slideshow. To exit the slideshow, press escape or click the close
-        button.
-      </p>
-      <p id="slide-num" aria-live="polite" class="screenreader-text"></p>
-      <button class="close" aria-label="Close">&times;</button>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-hero.png"
-          alt="View full size version of app screenshot with a lighthouse photo"
-        />
-      </div>
-      <div class="slide">
-        <img
-          src="images/drawthis-1.png"
-          alt="View full size version of screenshot of the introductory page of the app"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-2.png"
-          alt="View full size version of app screenshot with a lighthouse photo"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:20180127_FIS_NC_WC_Seefeld_Sophie_Caldwell_850_1151.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-3.png"
-          alt="View full size version of app screenshot with photo of skier"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Anfiteatro_de_Pula,_Croacia,_2017-04-17,_DD_13-18_HDR_PAN.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-4.png"
-          alt="View full size version of app screenshot with photo of Colosseum"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Abfertigen_einer_Meldung_durch_Brieftauben_-_CH-BAR_-_3240471_-_restoration.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-5.png"
-          alt="View full size version of app screenshot with black-and-white photograph of soldiers"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Buddhist_monks_cleaning_the_yard_at_Wat_Xieng_Thong_temple.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-6.png"
-          alt="View full size version of app screenshot with a Buddhist temple photograph"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Boys_playing_street_football_in_Egypt.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-7.png"
-          alt="View full size version of app screenshot with an image of boys playing soccer"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2019_-_Parc_national_des_Pyrenees_-_refuge_des_Espuguettes.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-8.png"
-          alt="View full size version of app screenshot with a photo of a house overlooking a mountain range"
-        />
-      </div>
-      <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Banaue_Philippines_Ifugao-Tribesman-01.jpg -->
-      <div class="slide">
-        <img
-          src="images/drawthis-9.png"
-          alt="View full size version of app screenshot with an image of a crouching, older Filipino man "
-        />
-      </div>
+      <div role="document" class="modal" tabindex="-1">
+        <h2 id="slide-num" aria-live="assertive" class="screenreader-text"></h2>
+        <p id="modal-description" class="screenreader-text">
+          Use arrow keys or the arrow buttons to proceed to the next or last
+          image in the slideshow. To exit the slideshow, press escape or click
+          the close button.
+        </p>
+        <button class="close" aria-label="Close dialog">&times;</button>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-hero.png"
+            alt="View full size version of app screenshot with a lighthouse photo"
+          />
+        </div>
+        <div class="slide">
+          <img
+            src="images/drawthis-1.png"
+            alt="View full size version of screenshot of the introductory page of the app"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-2.png"
+            alt="View full size version of app screenshot with a lighthouse photo"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:20180127_FIS_NC_WC_Seefeld_Sophie_Caldwell_850_1151.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-3.png"
+            alt="View full size version of app screenshot with photo of skier"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Anfiteatro_de_Pula,_Croacia,_2017-04-17,_DD_13-18_HDR_PAN.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-4.png"
+            alt="View full size version of app screenshot with photo of Colosseum"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Abfertigen_einer_Meldung_durch_Brieftauben_-_CH-BAR_-_3240471_-_restoration.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-5.png"
+            alt="View full size version of app screenshot with black-and-white photograph of soldiers"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Buddhist_monks_cleaning_the_yard_at_Wat_Xieng_Thong_temple.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-6.png"
+            alt="View full size version of app screenshot with a Buddhist temple photograph"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Boys_playing_street_football_in_Egypt.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-7.png"
+            alt="View full size version of app screenshot with an image of boys playing soccer"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2019_-_Parc_national_des_Pyrenees_-_refuge_des_Espuguettes.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-8.png"
+            alt="View full size version of app screenshot with a photo of a house overlooking a mountain range"
+          />
+        </div>
+        <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Banaue_Philippines_Ifugao-Tribesman-01.jpg -->
+        <div class="slide">
+          <img
+            src="images/drawthis-9.png"
+            alt="View full size version of app screenshot with an image of a crouching, older Filipino man "
+          />
+        </div>
 
-      <button class="left-arrow" aria-label="Previous image">
-        <span>&#x276E;</span>
-      </button>
-      <button class="right-arrow" aria-label="Next image">
-        <span>&#x276F;</span>
-      </button>
+        <button class="left-arrow" aria-label="Previous image">
+          <span>&#x276E;</span>
+        </button>
+        <button class="right-arrow" aria-label="Next image">
+          <span>&#x276F;</span>
+        </button>
+      </div>
     </div>
   </body>
 
